# wiki-clustering

./: .gitignore  .pre-commit-config.yaml  README.md  da-config.json  gv-config.json  lv-config.json  pyproject.toml  ruff.toml  run_and_upload_all.sh  run_for_lang.sh
language_configs/: bs-config.json  ca-config.json  cs-config.json  da-config.json  eu-config.json  gv-config.json  ilo-config.json  ku-config.json  lv-config.json  min-config.json  mt-config.json  sco-config.json  sq-config.json  wa-config.json
src/: check_files.py  config.py  create_categories.py  download_wikidump.py  fileio.py  get_top_categories.py  join_categories.py  multi-wiki-clustering-p2p.py  multi_wiki_clustering_p2p.py  parse_articles.py  parse_sql_gz.py  scrape_categories.py  upload_hf.py
