[tool.poetry]
name = "wiki-clustering"
version = "0.0.1"
description = "Utils for creating wiki cluster data"
authors = ["Jonathan Hvithamar Rystrøm <jhvithamar@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
beautifulsoup4 = "^4.12.3"
httpx = {extras = ["http2"], version = "^0.27.0"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
